<resources>
    <string name="app_name">MentApp</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="prompt_email">Email</string>
    <string name="title_activity_user">User</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="Profile">Profile</string>
    <string name="Sessions">Sessions</string>
    <string name="Payments">Payments</string>
    <string name="Bookings">Bookings</string>
    <string name="Settings">Settings</string>

    <string name="no_preference">No Preference</string>
    <string name="gender">Gender</string>
    <string name="faith">Faith</string>
    <string name="issue">Issue</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_counsellor_view">CounsellorView</string>
    <string name="title_activity_admins_view">AdminsView</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
