<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/BackgroundColor"
        tools:context=".SignUpActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:background="#FFFFFF"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/f_nameInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/f_name"
                        android:padding="10dp"
                        app:endIconMode="clear_text"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/LightMaroon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/clientFirstName"
                            android:layout_width="229dp"
                            android:layout_height="wrap_content"
                            tools:layout_editor_absoluteX="33dp"
                            tools:layout_editor_absoluteY="1162dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/l_nameInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/l_name"
                        android:padding="10dp"
                        app:endIconMode="clear_text"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/LightMaroon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/clientLastName"
                            android:layout_width="229dp"
                            android:layout_height="wrap_content"
                            tools:layout_editor_absoluteX="33dp"
                            tools:layout_editor_absoluteY="1162dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/usernameInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:padding="10dp"
                        app:endIconMode="clear_text"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/LightMaroon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/clientUsername"
                            android:layout_width="229dp"
                            android:layout_height="wrap_content"
                            tools:layout_editor_absoluteX="33dp"
                            tools:layout_editor_absoluteY="1162dp" />
                    </com.google.android.material.textfield.TextInputLayout>

<!--                    <com.google.android.material.textfield.TextInputLayout-->
<!--                        android:id="@+id/phoneInputLayout"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:hint="@string/phone_number"-->
<!--                        android:padding="10dp"-->
<!--                        app:endIconMode="clear_text"-->
<!--                        app:boxCornerRadiusBottomEnd="10dp"-->
<!--                        app:boxCornerRadiusBottomStart="10dp"-->
<!--                        app:boxCornerRadiusTopEnd="10dp"-->
<!--                        app:boxCornerRadiusTopStart="10dp"-->
<!--                        app:boxStrokeColor="@color/LightMaroon">-->

<!--                        <com.google.android.material.textfield.TextInputEditText-->
<!--                            android:id="@+id/clientPhoneNumber"-->
<!--                            android:layout_width="229dp"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            tools:layout_editor_absoluteX="33dp"-->
<!--                            tools:layout_editor_absoluteY="1162dp" />-->
<!--                    </com.google.android.material.textfield.TextInputLayout>-->


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:padding="10dp"
                        app:endIconMode="clear_text"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/LightMaroon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/clientEmail"
                            android:layout_width="229dp"
                            android:layout_height="wrap_content"
                            tools:layout_editor_absoluteX="33dp"
                            tools:layout_editor_absoluteY="1162dp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/n_passwordInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:padding="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/LightMaroon"
                        app:boxStrokeWidth="20dp"
                        app:boxStrokeWidthFocused="10dp"
                        app:endIconMode="password_toggle"
                        android:inputType="textPassword">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/clientpassword"
                            android:layout_width="229dp"
                            android:layout_height="wrap_content"
                            tools:layout_editor_absoluteX="33dp"
                            tools:layout_editor_absoluteY="1162dp"
                            android:inputType="textPassword"/>

                    </com.google.android.material.textfield.TextInputLayout>


<!--                    <com.google.android.material.textfield.TextInputLayout-->
<!--                        android:id="@+id/c_passwordInputLayout"-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:hint="@string/password"-->
<!--                        android:padding="10dp"-->
<!--                        app:boxCornerRadiusBottomEnd="10dp"-->
<!--                        app:boxCornerRadiusBottomStart="10dp"-->
<!--                        app:boxCornerRadiusTopEnd="10dp"-->
<!--                        app:boxCornerRadiusTopStart="10dp"-->
<!--                        app:boxStrokeColor="@color/LightMaroon"-->
<!--                        app:boxStrokeWidth="20dp"-->
<!--                        app:boxStrokeWidthFocused="10dp"-->
<!--                        app:endIconMode="password_toggle"-->
<!--                        android:inputType="textPassword">-->

<!--                        <com.google.android.material.textfield.TextInputEditText-->
<!--                            android:id="@+id/clientCPassword"-->
<!--                            android:layout_width="229dp"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            tools:layout_editor_absoluteX="33dp"-->
<!--                            tools:layout_editor_absoluteY="1162dp"-->
<!--                            android:inputType="textPassword"/>-->

<!--                    </com.google.android.material.textfield.TextInputLayout>-->

                    <Button
                        android:id="@+id/signUpBtn"
                        android:layout_width="@dimen/textWidth"
                        android:layout_height="@dimen/textHeight"
                        android:background="@drawable/button_bg_rounded_corners"
                        android:text="Sign Up"
                        android:layout_marginBottom="50dp"
                        android:textColor="@color/TextColor" />


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>