<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".CounsellorRegisterActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/BackgroundColor"
        app:layout_behavior= "@string/appbar_scrolling_view_behavior"
        tools:context=".SignUpActivity">

<!--        <ScrollView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@color/White">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical">

                <LinearLayout
                    android:layout_width="370dp"
                    android:layout_height="821dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/White"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/adminRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Counsellor Register"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        app:autoSizeTextType="uniform" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/f_nameInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/f_name"
                        android:padding="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/White"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/adminFirstName"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            tools:layout_editor_absoluteX="33dp"
                            tools:layout_editor_absoluteY="1162dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/l_nameInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/l_name"
                        android:padding="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/White"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/adminLastName"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            tools:layout_editor_absoluteX="33dp"
                            tools:layout_editor_absoluteY="1162dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/licenseInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="License No."
                        android:padding="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/White"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/license"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            tools:layout_editor_absoluteX="33dp"
                            tools:layout_editor_absoluteY="1162dp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:padding="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/White"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/adminEmail"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            tools:layout_editor_absoluteX="33dp"
                            tools:layout_editor_absoluteY="1162dp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/n_passwordInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        app:boxCornerRadiusBottomEnd="10dp"
                        app:boxCornerRadiusBottomStart="10dp"
                        app:boxCornerRadiusTopEnd="10dp"
                        app:boxCornerRadiusTopStart="10dp"
                        app:boxStrokeColor="@color/White"
                        app:boxStrokeWidth="20dp"
                        app:boxStrokeWidthFocused="10dp"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/adminPass"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            tools:layout_editor_absoluteX="33dp"
                            tools:layout_editor_absoluteY="1162dp" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/specialization"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Select specialization" />

                        <CheckBox
                            android:id="@+id/depression"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Depression"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox
                            android:id="@+id/anxiety"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Anxiety"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox
                            android:id="@+id/general"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="General"
                            android:onClick="onCheckboxClicked"/>
                        <CheckBox
                            android:id="@+id/drug_abuse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Drug Abuse Disorders"
                            android:onClick="onCheckboxClicked"/>


                    </LinearLayout>
                    <Button
                        android:id="@+id/signUpBtn"
                        android:layout_width="@dimen/textWidth"
                        android:layout_height="@dimen/textHeight"
                        android:layout_gravity="center"
                        android:layout_marginBottom="50dp"
                        android:background="@drawable/button_bg_rounded_corners"
                        android:text="Sign Up"
                        android:textColor="@color/TextColor" />


                </LinearLayout>
            </LinearLayout>
<!--        </ScrollView>-->

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>